feat: Text Editor MCP + Phase 2.5 Community Detection 完了
🎉 Cortex OS v1.1 大幅進展！

## Text Editor MCP (v1.0.0)
✅ OS が自身のファイルを編集可能に
- services/mcp/text-editor.mjs 実装完了
- 全10テスト通過 (write, append, insert, replace, search_replace)
- セキュリティ: whitelist, atomic writes, auto backup
- 対象: TODO.md, clusters-v1.md, cortex/daily, cortex/weekly, cortex/state

## Phase 2.5: MCP Community Detection
✅ MCP クラスタを5つのサブコミュニティに分割
- Louvain algorithm (graphology v0.26.0)
- 136 concepts → 5 communities
  - mcp-community-2 (50): ドキュメント・要件
  - mcp-community-0 (35): コア設定・プロトコル
  - mcp-community-1 (23): トランスポート
  - mcp-community-3 (19): コンテキスト
  - mcp-community-4 (9): Claude Code
- Top Hubs: Server (54), Primitive (51), JSONRPC (51)
- 出力: mcp-communities.json, mcp-clusters-v1.md

## v1.1 進捗
- ✅ Filesystem MCP (読む)
- ✅ Terminal MCP (作る)
- ✅ Text Editor MCP (書く)
- ⏳ Search MCP (探す) - 次回実装

🎯 Next: Search MCP → Cortex OS v1.1 完成

--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "main": "index.mjs",
   "scripts": {
     "prebuild": "pnpm -s agent:builder:validate && pnpm -s agent:builder:generate",
-  "postbuild": "node ./scripts/postbuild.mjs",
-  "dev": "next dev --hostname 0.0.0.0 --port 3000",
-  "dev:kb": "pnpm kb:build && pnpm dev",
-  "dev:mcp": "node -e \"console.log('\\n📘 MCP Local Dev Guide: docs/operations/mcp-local-dev.md\\n\\n1. Start MCP servers manually (see guide for commands)\\n2. Dev server will start on port 3000\\n')\" && pnpm dev",
-  "agent:dev": "next dev -p 3030",
+    "postbuild": "node ./scripts/postbuild.mjs",
+    "dev": "next dev --hostname 0.0.0.0 --port 3000",
+    "dev:kb": "pnpm kb:build && pnpm dev",
+    "dev:mcp": "node -e \"console.log('\\n📘 MCP Local Dev Guide: docs/operations/mcp-local-dev.md\\n\\n1. Start MCP servers manually (see guide for commands)\\n2. Dev server will start on port 3000\\n')\" && pnpm dev",
+    "agent:dev": "next dev -p 3030",
     "agent:dev:3030": "next dev -p 3030",
     "build": "next build",
     "agent:build": "next build",
-  "start": "next start -p 3030",
-  "agent:start": "next start -p 3030",
+    "start": "next start -p 3030",
+    "agent:start": "next start -p 3030",
     "agent:start:3030": "next start -p 3030",
     "agent:builder:init": "node ./scripts/agent-builder/init.mjs",
     "agent:builder:validate": "node ./scripts/agent-builder/validate.mjs",
     "agent:builder:generate": "node ./scripts/agent-builder/generate.mjs",
-  "agent:builder:all": "pnpm -s agent:builder:validate && pnpm -s agent:builder:generate && pnpm -s build",
-  "agent:builder:all:dev": "node ./scripts/agent-builder/all-dev.mjs",
-  "agent:builder:smoke": "node ./scripts/agent-builder/smoke.mjs",
+    "agent:builder:all": "pnpm -s agent:builder:validate && pnpm -s agent:builder:generate && pnpm -s build",
+    "agent:builder:all:dev": "node ./scripts/agent-builder/all-dev.mjs",
+    "agent:builder:smoke": "node ./scripts/agent-builder/smoke.mjs",
     "kb:build": "node ./scripts/kb/build.mjs",
-  "kb:smoke:api": "node ./scripts/kb/smoke-kb-api.mjs",
-  "kb:smoke:next": "node ./scripts/kb/smoke-next-kb-proxy.mjs",
-  "kb:smoke:next:toggle": "node ./scripts/kb/smoke-next-kb-proxy.mjs --toggle",
-  "ops:smoke:metrics": "node ./scripts/ops/smoke-metrics.mjs",
+    "kb:smoke:api": "node ./scripts/kb/smoke-kb-api.mjs",
+    "kb:smoke:next": "node ./scripts/kb/smoke-next-kb-proxy.mjs",
+    "kb:smoke:next:toggle": "node ./scripts/kb/smoke-next-kb-proxy.mjs --toggle",
+    "ops:smoke:metrics": "node ./scripts/ops/smoke-metrics.mjs",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:next": "next lint",
     "typecheck": "tsc --noEmit",
@@ -37,7 +37,6 @@
     "format:check": "prettier --check .",
     "fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix && prettier --write .",
     "ci": "pnpm lint && pnpm typecheck && pnpm test && pnpm build",
-    
     "test:contract": "jest --config jest.config.js src/__tests__/contract --runInBand",
     "ops:allowlist:list": "node ./scripts/ops/allowlist.mjs list",
     "ops:allowlist:add": "node ./scripts/ops/allowlist.mjs add",
@@ -97,6 +96,7 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.27.1",
+    "@modelcontextprotocol/server-memory": "^2025.11.25",
     "@redocly/openapi-cli": "1.0.0-beta.95",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -117,6 +117,8 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-testing-library": "^7.6.8",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "graphology": "^0.26.0",
+    "graphology-communities-louvain": "^2.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^29.7.0",
