--- a/.mcp.json.example
+++ b/.mcp.json.example
@@ -70,6 +70,58 @@
         "description": "n8n workflow bridge for automation tasks (lazy loaded)",
         "notes": "Default URL targets host.docker.internal so Docker containers can reach host n8n"
       }
+    },
+    "memory": {
+      "command": "npx",
+      "args": ["-y", "@modelcontextprotocol/server-memory"],
+      "env": {},
+      "allowedTools": [
+        "memory_store",
+        "memory_retrieve",
+        "memory_delete",
+        "memory_search"
+      ],
+      "metadata": {
+        "priority": "critical",
+        "autoStart": true,
+        "tokenUsage": "~1k tokens per session",
+        "description": "Session memory for Cortex OS - maintains context across /brief, /wrap-up, /init cycles",
+        "notes": "v1.1+ enhancement: persistent working memory for daily automation loops"
+      }
+    },
+    "text-editor": {
+      "command": "node",
+      "args": ["services/mcp/text-editor.mjs"],
+      "env": {},
+      "allowedTools": [
+        "write_file",
+        "append_to_file",
+        "insert_at_line",
+        "replace_lines",
+        "search_replace"
+      ],
+      "metadata": {
+        "priority": "critical",
+        "autoStart": true,
+        "tokenUsage": "~500 tokens per session",
+        "description": "Text editing for TODO.md, clusters-v1.md, and daily notes - enables OS to modify its own knowledge",
+        "notes": "v1.1: Core capability - OS can now write back to TODO, clusters, and reflection notes"
+      }
+    },
+    "fetch": {
+      "command": "npx",
+      "args": ["-y", "mcp-server-fetch"],
+      "env": {},
+      "allowedTools": [
+        "fetch"
+      ],
+      "metadata": {
+        "priority": "medium",
+        "autoStart": false,
+        "tokenUsage": "~500 tokens on-demand",
+        "description": "HTTP client for kb-api, n8n webhooks, and external APIs",
+        "notes": "Unified fetch interface - lazy loaded to minimize baseline context"
+      }
     }
   },
   "settings": {
