--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "ops:basic:set-single": "node ./scripts/ops/admin-basic.mjs set-single",
     "ops:smoke:tailscale": "node ./scripts/ops/tailscale/smoke-api.mjs",
     "cortex:digest:generate": "node ./cortex/scripts/generate-daily-digest.mjs",
-    "cortex:digest:today": "node ./cortex/scripts/generate-daily-digest.mjs"
+    "cortex:digest:today": "node ./cortex/scripts/generate-daily-digest.mjs",
+    "cortex:llms:input": "node ./cortex/scripts/generate-llms-input.mjs",
+    "cortex:llms:txt": "node ./scripts/generate-llms-txt.mjs",
+    "cortex:llms:all": "node ./cortex/scripts/generate-llms-input.mjs && node ./scripts/generate-llms-txt.mjs"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
