feat: task-entry.json スキーマ完成 🎉 v1.2 情報モデル統一 100% 達成！
## 実装内容

### 1. JSON Schema 定義
✅ cortex/schema/task-entry.json
- JSON Schema Draft-07 準拠
- 統一タスクフォーマット定義
- 7つのフィールド: date, tasks, completed, carryover, reflection, tomorrow_candidates, metadata
- Task オブジェクト仕様: content, status, tags, emoji, category, estimate, timestamps

### 2. バリデータ実装
✅ scripts/validate-task-entry.mjs
- 単一ファイル検証
- ディレクトリ一括検証
- 詳細なエラーメッセージ
- CLI ツール

Usage:
  pnpm cortex:validate-task-entry <file-or-directory>

### 3. 変換スクリプト実装
✅ scripts/convert-to-task-entry.mjs
- Daily Digest (Markdown) → task-entry.json 変換
- タスクパース（checkbox, tags, emoji, category）
- Reflection 抽出
- CLI ツール

Usage:
  pnpm cortex:convert-digest <date>
  pnpm cortex:convert-digest 2025-12-05 --output custom.json

### 4. ドキュメント
✅ docs/requirements/task-entry-schema.md
- 完全なスキーマ仕様
- フィールド詳細
- 使用例
- データ変換ガイド
- Recipe 統合計画
- マイグレーション計画（4 Phases）

### 5. package.json スクリプト
✅ 2つの新スクリプト追加:
- `cortex:validate-task-entry` - バリデーション
- `cortex:convert-digest` - 変換

### 6. テスト
✅ 変換 & バリデーション成功:
- 2025-12-05-digest.md → task-entry-2025-12-05.json ✅
- 2025-12-01-digest.md → task-entry-2025-12-01.json ✅
- Schema validation 全て通過

## 影響

### v1.2 "Autonomy" 進捗: 70% → 85% (+15%)

#### ② 情報モデル統一: 70% → **100%** ✅ **完全達成！**
- ✅ llms-input.json パイプライン完成
- ✅ llms.txt 生成パイプライン完成
- ✅ MCP Layer 情報統合完成
- ✅ **task-entry.json スキーマ完成** 🎉 **NEW**

### メリット
1. **データ変換コストがゼロに**
   - Before: MD → Parser → Custom Object → Converter → MD
   - After: task-entry.json (read) → task-entry.json (write)

2. **全レイヤーで一貫した処理**
   - Recipe 10, 13, 03 が同じデータ形式を使用
   - バリデーション、変換、集約が統一ロジック

3. **将来の拡張が容易**
   - 月次 Summary: 30 個の task-entry.json を集約
   - AI 教師データ: task-entry.json をそのまま使用
   - 統計分析: JSON を直接処理

## 次のステップ（Phase 2）

### Recipe 統合（予定: 2025-12-06）
- [ ] Recipe 13 を task-entry.json 出力に変更
- [ ] Recipe 10 を task-entry.json 読み込みに変更
- [ ] Recipe 03 を task-entry.json 出力に変更

### v1.2 完成まで残り15%
- 1週間の安定稼働確認（進行中: 3/7日）
- Recipe 統合完了
- /ask コマンド実装

🎯 v1.2 "Autonomy" 完成予定: 20

--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "cortex:digest:today": "node ./cortex/scripts/generate-daily-digest.mjs",
     "cortex:llms:input": "node ./cortex/scripts/generate-llms-input.mjs",
     "cortex:llms:txt": "node ./scripts/generate-llms-txt.mjs",
-    "cortex:llms:all": "node ./cortex/scripts/generate-llms-input.mjs && node ./scripts/generate-llms-txt.mjs"
+    "cortex:llms:all": "node ./cortex/scripts/generate-llms-input.mjs && node ./scripts/generate-llms-txt.mjs",
+    "cortex:validate-task-entry": "node ./scripts/validate-task-entry.mjs",
+    "cortex:convert-digest": "node ./scripts/convert-to-task-entry.mjs"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
