test(v1.4): add Phase 1 test suite and polish
Phase 1 Polishing Complete ✅

Tests:
- 7 test cases for log.py and note.py
- All passing (pytest -v)
- Coverage: format, insert, multiple entries

Documentation:
- Added usage examples to v1.4 roadmap
- Recommended categories (admin, core-work, research, meeting)
- Usage timing guidance (3-5 logs/day, 1-3 notes/day)

Aliases:
- .zshrc_cortex_aliases file for easy setup
- log-task / lt shortcuts
- note-task / nt shortcuts

Next: Phase 2 (digest ↔ tasks.json sync)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,9 @@ services:
     restart: unless-stopped
 
   n8n:
-    image: n8nio/n8n:1.116.2
+    build:
+      context: ./services/n8n
+      dockerfile: Dockerfile
     container_name: n8n
     environment:
       - TZ=Asia/Tokyo
